--- a/src/styles/MainPageStyle.css
+++ b/src/styles/MainPageStyle.css
@@ -14,13 +14,15 @@ body {
 
 .heading {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 2rem;
 }
+
 .filter {
+  margin-bottom: 2rem;
   display: flex;
-  justify-content: space-between;
-  align-self: center;
+  justify-content: center;
+  font-size: 1.5rem;
 }
 
 .main-card {
@@ -53,12 +55,15 @@ body {
   overflow: hidden;
   position: relative;
 }
-/* .description:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 2rem;
-  background: linear-gradient(180deg, transparent, #f0eae5 90%);
-} */
+
+@media (max-width: 1800px) {
+  .container {
+    margin: 1rem 8rem;
+  }
+  .main-card {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 20rem;
+  }
+}
